<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/container_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_margin="48dp">

        <TableRow
            android:background="@color/purple_500">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/colunaNome"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/colunaSobrenome"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/colunaIdade"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="2"
                android:gravity="center_horizontal" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nome1"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sobrenome1"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/idade1"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal" />


        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nome2"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sobrenome2"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/idade2"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal" />


        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nome3"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sobrenome3"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/idade3"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal" />

        </TableRow>

    </TableLayout>

</RelativeLayout>


